--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MarsWeatherActivity"></activity>
+        <activity android:name=".HuntPage"></activity>
+        <activity android:name=".ScavengerHunt" />
+        <activity android:name=".MarsWeatherActivity" />
         <activity android:name=".ImageAndVideoActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
